# NewGithubRepoSteelWorks

./: .dockerignore  .env.example  .env.test  .pre-commit-config.yaml  DOCKER_SETUP.md  Dockerfile  README.md  TESTING.md  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt  sbom-github-spdx.json  sbom-pip-licenses.csv  sbom-pip-licenses.json  sbom-pip-licenses.md
.github/workflows/: ci.yml  code-quality.yml  codeql.yml  deploy.yml  sbom.yml
data/sample/: Ops_Production_Log (1).xlsx  Ops_Shipping_Log.xlsx
db/: sample_queries.sql  schema.sql  seed.sql
docs/: PRE_COMMIT_SETUP.md  SBOM_REPORT.md  architecture_decision_records.md  assumptions_scope.md  data_design.md  tech_stack_decision_records.md
scripts/: check_copyleft_licenses.py  check_gpl_license.py
src/steelworks/: __init__.py  app.py  models.py  repositories.py  service.py
tests/: __init__.py  conftest.py  test_e2e_playwright.py  test_integration.py  test_repositories.py
